# bigmath

./: .gitignore  CMakeLists.txt  README.md
.vim/: run
benchmarks/: main.cpp
benchmarks/data/: macosx_i7_9750h_asm_x86_64.txt  macosx_i7_9750h_builtin_int128.txt
bigmath/: asm_add.s  asm_compare.s  asm_mul.s  asm_square.s  builtin_add.cpp  builtin_compare.cpp  builtin_mul.cpp  builtin_square.cpp  internal.h  inttypes.h  natural.h  place.h
tests/: helper.h  nat_add.cpp  nat_compare.cpp  nat_mul.cpp  nat_square.cpp  natural_add.cpp
